@@ -324,6 +324,8 @@ Build
 
 - Issue #17219: Add library build dir for Python extension cross-builds.
 
+- Issue #22877: PEP 477 - OS X installer now installs pip.
+
 Windows
 -------
 
